--- a/estilo/style.css
+++ b/estilo/style.css
@@ -60,6 +60,7 @@ header > p{
 nav{
     background-color: var(--cor5);
     padding-bottom: 10px;
+    padding-top: 20px;
     box-shadow: 0px 7px 8px rgba(0, 0, 0, 0.187);
 }
 
